# ckpt-integrity

./: .gitignore  AI_Log.txt  Makefile  README.md  pyproject.toml  requrements.txt
.github/workflows/: ci.yml
ckpt/: events.csv
repro/: Makefile  README.md
scripts/: ckpt_watch.sh  demo_fault.sh  run_baseline.sh  trace_blktrace_linux.sh  trace_iostat_linux.sh  trace_iostat_mac.sh  venv_on.sh
src/aiwork/: ckpt_writer.py  group_ckpt.py  torch_ckpt_writer.py
src/ckpt_integrity/: utils.py
src/ckpt_integrity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ckpt_integrity/guard/: verify_and_watch.py
src/ckpt_integrity/inject/: flip_bits.py  truncate.py
src/ckpt_integrity/trace/: parse_iostat.py  plot_iostat.py
src/ckpt_integrity/training/: train.py
src/guard/: group_guard.py  group_rollback.py  integrity_guard.py  integrity_guard_pt.py  rollback.py
src/traceutils/: fs_trace.py
tools/: adds_ts_to_iostat.py  atomic_truncate.py  bench_group_ckpt.py  event_io_join.py  events_summary.py  ftl_epoch_buckets.py  ftl_event_parser.py  ftl_event_sim.py  ftl_fault_propagation.py  ftl_report.py  iostat_parse.py  meta_rebaseline.py  plot_latency_hist.py  plot_timeline.py  run_group_fuzz.py  run_many.py  run_many_torch.py  run_with_trace.py  summarize_bench.py  summarize_group.py  summarize_torch.py  xlayer_plot.py  xlayer_table.py  xlayer_table_c.py  xlayer_timeline.py
trace/: event_io.csv  events_summary.txt  iostat.csv
trace/timeline/: timeline.csv
